@@ -39,6 +39,7 @@
 * Ver   Who     Date     Changes
 * ----- ------  -------- ------------------------------------------------------
 * 1.0   vns     2/27/15  First release
+* 1.8   hk      7/19/19  Remove versal clock and routing workarounds.
 * </pre>
 *
 ******************************************************************************/
@@ -101,10 +102,6 @@ extern "C" {
 #define XZDMA_CH_CTRL2_OFFSET			(0x200U)
 /*@}*/
 
-#define XZDMA_SLCR_SECURE_OFFSET		(0xff4b0024)
-#define XZDMA_CRLADMA_CLK_OFFSET		(0xff5e0104)
-#define XZDMA_CRLADMA_RESET_OFFSET		(0xff5e0304)
-#define XZDMA_INTLPD_CONFIG_OFFSET		(0xfe600014)
 /** @name Interrupt Enable/Disable/Mask/Status registers bit masks and shifts
  * @{
  */
